Code/Services, Load Balancing, Networking/Ingress/1/Ingress_1.yaml
apiVersion: extensions/v1beta
kind: Ingress
metadata:
  name: myoid
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: openid-svc
          servicePort: 9000
      - path: /health
        backend:
          serviceName: health-svc
          servicePort: 80
