Code/Services, Load Balancing, Networking/Ingress/1/Ingress_10.yaml
# path based routing 

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: target.lab.com
    http:
      paths:
      - path: /hello
        backend:
          serviceName: hello-app
          servicePort: 8080
      - path: /shop
        backend:
          serviceName: cp-svc
          servicePort: 8000
