Code/Services, Load Balancing, Networking/Ingress/1/Ingress_4.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /foo
        backend:
          serviceName: my-service-1
          servicePort: 80
      - path: /bar
        backend:
          serviceName: my-service-2
          servicePort: 80
