Code/Services, Load Balancing, Networking/Ingress/1/Ingress_8.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world
  annotations:
    kubernetes.io/ingress.class: ingress-nginx
spec:
  rules:
  - host: host1.domain.ext
    http:
      paths:
      - backend:
          serviceName: hello-world
          servicePort: 80
